[package]
name = "ethist"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
iced = { version = "0.14.0", features = ["advanced", "canvas", "crisp", "image", "thread-pool", "tiny-skia", "tokio", "wayland", "wgpu"], default-features = false }
librespot = { version = "0.8.0", features = ["native-tls", "pulseaudio-backend", "with-avahi"], default-features = false }
reqwest = { version = "0.12.25", features = ["http2", "system-proxy", "default-tls"], default-features = false }

[features]
embedded = []
